tests/ui/parse__non_literal_model.stderr
error: expected string literal
 --> tests/ui/parse__non_literal_model.rs:4:37
  |
4 | const MODEL: &str = model_supports!(MODEL_ID, param::tools);
  |                                     ^^^^^^^^
